[package]
name = "rsa"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/chiro2001/cryptography-labs"
description = "Simple RSA generate / encode / decode tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
chrono = "0.4.22"
clap = { version = "4.0.4", features = ["derive"] }
crossbeam-channel = { version = "0.5.6", features = ["crossbeam-utils"] }
indicatif = "0.17.1"
lazy_static = "1.4.0"
mut_static = "5.0.0"
num = "0.4.0"
num-bigint = { version = "0.4.3", features = ["rand"] }
num-traits = "0.2.15"
num_cpus = "1.13.1"
rand = "0.8.5"
time = "0.3.14"
